--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,13 @@
     "serve": "vitepress serve"
   },
   "dependencies": {
-    "vitepress": "1.0.0-alpha.43"
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@wu-web/fighting-design": "^0.31.0",
+    "@wu-web/fighting-icon": "^0.4.0",
+    "sass": "^1.60.0",
+    "vite": "^4.2.1",
+    "vitepress": "1.0.0-alpha.63",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@fighting-design/fighting-icon": "^0.4.0",
